# weact-studio-epd

examples/esp32c6/: Cargo.toml
examples/esp32c6/src/: main.rs
